2009-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-aclsForUser:uidforObjectAtPath:objectPathArray]): cache an empty
	array if not acl have been returned for the specified user.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-lookupContactsWithFilter:filtersortBy:sortKeyordering:sortOrdering]):
	same as below.
	([SOGoContactGCSFolder -fixupContactRecord:contactRecord]): new
	method that initializes c_mail, c_screenname, c_o,
	c_telephonenumber to empty strings if not found.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	-lookupContactsWithFilter:filtersortBy:sortKeyordering:sortOrdering]):
	no longer make use of the displayName, mail, screenName, phone and
	org intermediary keys.

	* UI/Contacts/UIxContactsListView.m ([-currentCName]): removed
	useless method.

2009-02-05  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -responseWithStatus:):
	we now set the content-type to "text/plain" to fix issues with nginx.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer
	-startElement:namespace:rawName:attributes:]): the base tag must be ignored.

2009-01-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the Apache section in the installation
	and configuration guide
	* Apache/SOGo.conf
	Updated to use mod_proxy and mod_proxy_balancer
	instead of mod_ngobjweb. We now also distribute
	requests across three sogod processes.
	* sogo.spec
	Removed mod_ngobjweb from the build dependancies

2009-01-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -fixupRecord:_record]): removed the unused
	isAllDay local variable.
	([SOGoAppointmentFolder -fixupRecords:records]): removed the
	unused "fetchRange:" argument.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	+folderWithSubscriptionReference:referenceinContainer:aContainer]):